# NovaBrawlStarsApi

./: LICENSE  README.md  main.py  pyproject.toml  setup.py
novabrawlstars/: __init__.pyi  client.py  client.pyi  exceptions.py  exceptions.pyi
novabrawlstars/models/: __init__.py  __init__.pyi
novabrawlstars/models/battlelog/: battleEventType.py  battleEventType.pyi  battleResultType.py  battleResultType.pyi  battleTeamsType.py  battleTeamsType.pyi  battlelog.py  battlelog.pyi  brawlerBattleType.py  brawlerBattleType.pyi  starPlayerType.py  starPlayerType.pyi
novabrawlstars/models/brawler/: brawlerType.py
novabrawlstars/models/club/: __init__.py  club.py  clubMember.py  clubMemberArgs.py
novabrawlstars/models/paging/: pagingType.py
novabrawlstars/models/player/: __init__.py  __init__.pyi  brawlerAccessoryType.py  brawlerAccessoryType.pyi  brawlerGearStatsType.py  brawlerGearStatsType.pyi  brawlerStarPowerType.py  brawlerStarPowerType.pyi  brawlerStatsType.py  brawlerStatsType.pyi  player.py  player.pyi  playerClubType.py  playerClubType.pyi  playerIconType.py  playerIconType.pyi
novabrawlstars/models/ranking/: __init__.py  brawlerRankingCountryType.py  brawlerRankingType.py  clubRankingCountryType.py  clubRankingType.py  playerRankingCountryType.py  playerRankingType.py
src/novabrawlstars/: client.py  exceptions.py
src/novabrawlstars/models/: player.py
