[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novabrawlstars"
version = "0.1.0"
authors = [
    { name = "NovaFenice" }
]
description = "Unofficial Python wrapper for the Brawl Stars API."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["brawl stars", "api", "python", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests", "python-dotenv"
]

[project.urls]
Homepage = "https://github.com/NovaFenice/NovaBrawlStarsAPI"
Documentation = "https://github.com/NovaFenice/NovaBrawlStarsAPI"

[tool.setuptools.packages.find]
where = ["."]